tests/baselines/reference/parserForOfStatement14.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement14.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement14.ts (1 errors) ====
    for (let [a, b] of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }